--- a/client/scss/base/_variables.scss
+++ b/client/scss/base/_variables.scss
@@ -13,6 +13,8 @@ $preview-height:200px;
 $sidebar-min-width:15em;
 $sidebar-max-width:30em;
 
+$bar-height:1.5em;
+
 $XS:    320px;
 $S:		500px;
 $S-M:	600px;
