--- a/client/views/partials/space-thumbnail.html
+++ b/client/views/partials/space-thumbnail.html
@@ -1,4 +1,4 @@
-<a ui-sref="space({id:space.id})">
+<a ui-sref="base.space({id:space.id})">
    {{space.name }}  <br/> {{space.public? '' : '(private)'}}
 </a>
 
