--- a/client/scss/base/_normalize.scss
+++ b/client/scss/base/_normalize.scss
@@ -92,6 +92,10 @@ body {
     margin: 0;
 }
 
+body *{
+    outline:none;
+}
+
 /* ==========================================================================
    Links
    ========================================================================== */
