--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -10,9 +10,9 @@
 
 @import 'import/import';
 
+@import 'layout';
+@import 'colors';
 
-
-@import 'main/landing';
 @import 'main/main-container';
 @import 'main/xyz-item';
 @import 'main/list';
