--- a/client/scss/main/_main-container.scss
+++ b/client/scss/main/_main-container.scss
@@ -1,4 +1,4 @@
-.main-container {
+.base-container {
 
   position: absolute;
   top: 0;
@@ -11,11 +11,3 @@
     position: fixed;
   }
 }
-
-
-.space-title{
-  position:absolute;
-  top:0;
-  left: 10em;
-}
-
