fix sidebar tools

--- a/client/views/sidebar/import/import-container.html
+++ b/client/views/sidebar/import/import-container.html
@@ -7,11 +7,11 @@
 
 <h3>add media to {{space.name}}:</h3>
 <ul class="tabs">
-  <li ui-sref="space.search" ui-sref-active="active">search
+  <li ui-sref="base.space.search" ui-sref-active="active">search
   </li>
-  <li ui-sref="space.url" ui-sref-active="active">load url
+  <li ui-sref="base.space.url" ui-sref-active="active">load url
   </li>
-  <li ui-sref="space.explore" ui-sref-active="active">explore
+  <li ui-sref="base.space.explore" ui-sref-active="active">explore
   </li>
 </ul>
 
