misc style improvements
z-index of top bar, no more beige bg color in player, no more iframe border in player

--- a/xyz-player-component/xyz-component-style-app-only.scss
+++ b/xyz-player-component/xyz-component-style-app-only.scss
@@ -14,7 +14,11 @@
     width:100%;
     display: inline-block;
 
-    background-color:lightgoldenrodyellow;
+    background:none;
+  }
+
+  iframe{
+    border:none;
   }
 
   .media-controls{
