--- a/xyz-player-component/xyz-component-style-app-only.scss
+++ b/xyz-player-component/xyz-component-style-app-only.scss
@@ -1,46 +1,62 @@
-.xyz-player{
-  color:white;
-  z-index:1;
+.xyz-player {
+  color: white;
+  z-index: 1;
 
-  height:200px;
-  width:100vw;
-  background-color:black;
-  text-align:center;
-  position:fixed;
-  bottom:3em;
+  height: 200px;
+  width: 100vw;
+  background-color: black;
+  text-align: center;
+  position: fixed;
+  bottom:0;
 
-  h1{
-    font-size:1.5em;
+  h1 {
+    font-size: 1.5em;
   }
-  h1,h2,h3,h4,h5{
+  h1, h2, h3, h4, h5 {
     display: inline-block;
+    margin: 0;
   }
-  .media-box{
-    height:180px;
+  .media-box {
+    height: 200px;
+    position: absolute;
+    top: 3em;
     width:100%;
-    display: inline-block;
+    left: 0;
 
-    background:black;
   }
 
-  iframe{
-    border:none;
+  iframe {
+    border: none;
+    height:100%;
   }
 
-  .media-controls{
-    button{
-      background-color:black;
-      border: none
+  .media-controls {
+
+    button {
+      background-color: black;
+      border: none;
+      max-height:1em;
+      max-width:1em;
+      margin: 0;
+      padding:0
     }
   }
 
 }
 
-#xyz-soundcloud-iframe,#widget2{
-  width:100%;
-  height:150px;
+.player-title{
+    max-width: 70%;
+    display: inline-block;
+    /* float: left; */
+    white-space: nowrap;
+    overflow: scroll;
+    margin-bottom:-100px;
+    padding-bottom:100px; /* to hide scrolbar */
 }
 
-
+#xyz-soundcloud-iframe, #widget2 {
+  width: 100%;
+  height: 150px;
+}
 
 @import "mock-media-provider/mock-media-provider";
