improve sidebar - consolidate tabs to 'add media'.  second tab is 'edit space'

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -859,12 +859,12 @@ body.old-ie {
 .top-bar .logo {
   cursor: pointer; }
 
-.top-bar .icon {
-  cursor: pointer; }
-
 .top-bar .user-settings {
   color: white;
   background-color: black; }
+
+.icon {
+  cursor: pointer; }
 
 .a {
   outline: none; }
