div spacer if settings icon not there, so that space title is centered

--- a/client/views/bar.html
+++ b/client/views/bar.html
@@ -17,6 +17,7 @@
            ng-if="User.get()">
     settings
   </md-icon>
+  <div ng-if="!User.get()"> </div>
 
   <div class="user-settings" ng-if="settingsOpen()">
 
