reorganize sidebar / edit files, add likes + tracks links for artists

--- a/client/views/sidebar/sidebar-add.html
+++ b/client/views/sidebar/sidebar-add.html
@@ -24,3 +24,12 @@
     <span ng-if="newText && error"> Sorry, {{error}} Please try adjusting the URL
     </span>
 </div>
+
+
+<div ng-if="FB.isConnected()">
+  <h4>load neat songs from your facebook feed. click the button again to load more</h4><br/>
+  <button ng-click="explore(Social.FB.loadPosts())">more FB posts</button>
+</div>
+<div ng-if="!FB.isConnected()">
+  <h4> click on the button at the bottom to connect to Facebook, then you can load songs that you posted</h4>
+</div>
