--- a/client/views/sidebar/sidebar-container.html
+++ b/client/views/sidebar/sidebar-container.html
@@ -14,8 +14,8 @@
 
     <div ng-if="viewer === 'owner' || viewer === 'collaborator'">
       <div
-          ng-include="'views/sidebar/import/import-container.html'"
-          ng-controller="ImportCtrl">
+          ng-include="'views/sidebar/sidebar-owner-view.html'"
+          ng-controller="AddMediaCtrl">
       </div>
 
 
