small improvements to search results (html / js)

--- a/client/views/sidebar/sidebar-search-result.html
+++ b/client/views/sidebar/sidebar-search-result.html
@@ -1,29 +1,46 @@
-
 <!--
     <img src="{{item.pic}}" width="100" />-->
+<div class="search-result" layout="row">
+  <div layout="column" class="search-result-actions">
     <button class="add" ng-if="!item.error && isMedia(item)" ng-click="putInSpace(item, $event)">
       add
     </button>
     <button class="add" ng-if="isSoundcloudArtist(item)" ng-click="MediaAPI.SC.tracksByUser(item.provider_id)
         .then(updateImportView)
         .catch(invalidLink)">
-      load artist tracks
+      artist tracks
     </button>
     <button class="add" ng-if="isSoundcloudArtist(item)" ng-click="MediaAPI.SC.likesByUser(item.provider_id)
         .then(updateImportView)
         .catch(invalidLink)">
-      load artist likes
+      artist likes
     </button>
     <button class="play" ng-if="!item.error && Library.isPlayable(item)" ng-click="Player.play(item)">
       play
     </button>
-    <a ng-href="{{item.url}}">
-      <span ng-if="!item.error">
-        ({{item.provider}}) {{item.artist}} - {{item.title}} ({{item.provider_id}})
-      </span>
-      <span ng-if="item.error">
-        {{item.error}}
-      </span>
-    </a>
 
-    <pre class="debug" ng-if="false">{{item | json}}</pre>
+  </div>
+  <div layout="column" class="search-result-details">
+
+    <div class="provider">
+      <a ng-href="{{item.url}}" target="_blank" ng-if="!item.error">
+        {{item.provider}}
+      </a>
+
+    </div>
+
+    <div class="artist">
+      {{item.artist}}
+    </div>
+    <div class="title">
+      {{item.title}}
+    </div>
+
+    <div class="error" ng-if="item.error">
+      {{item.error}}
+    </div>
+  </div>
+
+
+  <pre class="debug" ng-if="false">{{item | json}}</pre>
+</div>
