--- a/client/views/sidebar/selector.html
+++ b/client/views/sidebar/selector.html
@@ -24,7 +24,7 @@
 
   </div>
 
-  <div class="song-row" ng-repeat="item in Library.getLocalItems()"
+  <div ng-repeat="item in Library.getLocalItems()"
        ng-if="!Library.getLocalItems().urlResult"  ng-include="'views/sidebar/sidebar-search-result.html'"></div>
 </div>
 
