loading directive (use to show element when there are pending network requests)

--- a/client/scss/main/_main-container.scss
+++ b/client/scss/main/_main-container.scss
@@ -7,3 +7,10 @@
   height: 100vh;
   text-align: center;
 }
+
+.loading-indicator {
+
+  width:100vw;
+  z-index:10000;
+  background-color:pink;
+}
