--- a/client/views/bar.html
+++ b/client/views/bar.html
@@ -52,7 +52,10 @@
     <button ng-click="User.logout().catch(showError)">Log out</button>
   </div>
 </div>
-<md-progress-linear class="loading-indicator" loading  md-mode="indeterminate">
+<md-progress-linear
+    class="loading-indicator"
+    loading
+    md-mode="indeterminate">
 
 </md-progress-linear>
 
