--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -8,7 +8,7 @@
     </div>
 
   </div>
-  <div ng-if="!User.loggedIn()" class="landing-section" >
+  <div ng-if="!User.loggedIn()" class="landing-section">
 
     <h4>Sign up</h4>
     <form ng-submit="clearError(registerData).then(User.register).then(User.login).catch(showError)">
@@ -40,7 +40,7 @@
     </div>
 
     <div ng-if="isAdding()">
-      <input ng-model="newSpace.name" placeholder="new space name"></input>
+      <input ng-model="newSpace.name" placeholder="new space name">
       <md-icon class="icon" ng-click="User.addSpace(newSpace).then(resetAdding).catch(showError)">add_circle</md-icon>
     </div>
 
@@ -51,12 +51,20 @@
       <a ng-click="resetAdding()"> (nevermind)</a>
     </div>
 
-    <ul ng-if="User.spaces" class="user-spaces-container">
-      <h2 ng-if="User.hasSpaces()">{{User.get().name}}'s spaces:</h2>
-      <li ng-repeat="space in User.spaces"
+    <h2 ng-if="User.hasOwnSpaces()>my own spaces:</h2>
+    <ul ng-if=" User.hasOwnSpaces()" class="user-spaces-container">
+    <li ng-repeat="space in User.getSpaces().own"
+        ng-include="'views/partials/space-thumbnail.html'"
+        class="space-thumbnail">
+
+    </li>
+    </ul>
+
+    <h2 ng-if="User.hasEditableSpaces()">spaces I have access to:</h2>
+    <ul ng-if="User.hasEditableSpaces()" class="user-spaces-container">
+      <li ng-repeat="space in User.getSpaces().editable"
           ng-include="'views/partials/space-thumbnail.html'"
           class="space-thumbnail">
-
       </li>
     </ul>
 
